--- a/app/src/main/res/layout-land/act_lugar_cont.xml
+++ b/app/src/main/res/layout-land/act_lugar_cont.xml
@@ -59,7 +59,7 @@
 			android:layout_height="wrap_content"
 			android:hint="@string/descripcion"
 			android:ems="10"
-			android:inputType="textMultiLine|textCapWords"
+			android:inputType="textMultiLine"
 			android:maxLines="3"/>
 	</android.support.design.widget.TextInputLayout>
 
