--- a/app/src/main/res/layout/act_aviso.xml
+++ b/app/src/main/res/layout/act_aviso.xml
@@ -30,5 +30,12 @@
 		android:layout_gravity="bottom|end"
 		android:layout_margin="@dimen/fab_margin"
 		android:src="@android:drawable/ic_menu_revert"/>
+	<android.support.design.widget.FloatingActionButton
+		android:id="@+id/fabBuscar"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="bottom|start"
+		android:layout_margin="@dimen/fab_margin"
+		android:src="@android:drawable/ic_menu_search"/>
 
 </android.support.design.widget.CoordinatorLayout>
