--- a/app/src/main/res/layout/act_maps.xml
+++ b/app/src/main/res/layout/act_maps.xml
@@ -29,4 +29,11 @@
 		android:layout_gravity="end|bottom"
 		android:layout_margin="@dimen/fab_margin"
 		android:src="@android:drawable/ic_menu_revert"/>
+	<android.support.design.widget.FloatingActionButton
+		android:id="@+id/fabBuscar"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="bottom|start"
+		android:layout_margin="@dimen/fab_margin"
+		android:src="@android:drawable/ic_menu_search"/>
 </android.support.design.widget.CoordinatorLayout>
