--- a/app/src/main/res/layout/act_lugar_cont.xml
+++ b/app/src/main/res/layout/act_lugar_cont.xml
@@ -51,7 +51,7 @@
 			android:layout_height="wrap_content"
 			android:hint="@string/descripcion"
 			android:ems="10"
-			android:inputType="textMultiLine"
+			android:inputType="textMultiLine|textCapSentences"
 			android:maxLines="3"/>
 	</android.support.design.widget.TextInputLayout>
 
