--- a/app/src/main/res/layout/act_maps.xml
+++ b/app/src/main/res/layout/act_maps.xml
@@ -21,9 +21,8 @@
 		android:layout_gravity="center_horizontal|bottom"
 		android:layout_margin="@dimen/fab_margin"
 		android:src="@android:drawable/ic_menu_save"/>
-
 	<android.support.design.widget.FloatingActionButton
-		android:id="@+id/btnVolver"
+		android:id="@+id/fabVolver"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="end|bottom"
