--- a/app/src/main/res/layout/act_main_frag.xml
+++ b/app/src/main/res/layout/act_main_frag.xml
@@ -5,8 +5,8 @@
 	android:layout_height="match_parent"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:paddingBottom="2dp"
-	android:paddingLeft="4dp" android:paddingStart="4dp"
-	android:paddingRight="2dp" android:paddingEnd="2dp"
+	android:paddingStart="4dp"
+	android:paddingEnd="2dp"
 	android:paddingTop="2dp"
 	tools:context=".ActMain">
 
@@ -15,10 +15,8 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_alignParentTop="true"
-		android:layout_alignParentLeft="true"
 		android:layout_alignParentStart="true"
-		app:layout_behavior="@string/appbar_scrolling_view_behavior"
-		/>
+		app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
 	<android.support.design.widget.FloatingActionButton
 		android:id="@+id/fabNuevo"
