--- a/app/src/main/res/xml/pref_data_sync.xml
+++ b/app/src/main/res/xml/pref_data_sync.xml
@@ -11,4 +11,17 @@
 		android:key="save_login"
 		android:title="@string/pref_save_login"/>
 
+	<SwitchPreference
+		android:defaultValue="false"
+		android:key="save_all_points"
+		android:title="@string/pref_save_all"/>
+
+	<EditTextPreference
+		android:defaultValue="30"
+		android:key="tracking_seconds"
+		android:selectAllOnFocus="true"
+		android:singleLine="true"
+		android:inputType="number"
+		android:title="@string/pref_tracking_seconds" />
+
 </PreferenceScreen>
