--- a/app/src/main/res/layout/act_login_frag.xml
+++ b/app/src/main/res/layout/act_login_frag.xml
@@ -77,7 +77,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			style="@style/btnStyle"
-			android:text="@string/send"/>
+			android:text="@string/login"/>
 	</android.support.v7.widget.LinearLayoutCompat>
 
 	<android.support.v7.widget.LinearLayoutCompat
@@ -86,7 +86,7 @@
 		android:layout_height="wrap_content"
 		android:layout_below="@+id/layBoton"
 		android:layout_centerHorizontal="true"
-		android:layout_marginTop="50dp">
+		android:layout_marginTop="25dp">
 		<com.google.android.gms.common.SignInButton
 			android:id="@+id/btnGoogle"
 			android:layout_width="wrap_content"
@@ -101,7 +101,7 @@
 		android:layout_height="wrap_content"
 		android:layout_below="@+id/layBotonGoogle"
 		android:layout_centerHorizontal="true"
-		android:layout_marginTop="25dp">
+		android:layout_marginTop="50dp">
 		<Button
 			android:id="@+id/btnPrivacyPolicy"
 			android:layout_width="wrap_content"
