--- a/app/src/main/res/layout/act_buscar_cont.xml
+++ b/app/src/main/res/layout/act_buscar_cont.xml
@@ -20,7 +20,7 @@
 		android:layout_centerHorizontal="true"
 		android:layout_marginTop="5dp"
 		android:layout_marginBottom="5dp"
-		android:text="@string/activo"
+		android:text="@string/isActivo"
 		/ -->
 	<LinearLayout
 		android:id="@+id/layActivo"
