--- a/app/src/main/res/layout-land/act_aviso_cont.xml
+++ b/app/src/main/res/layout-land/act_aviso_cont.xml
@@ -32,7 +32,7 @@
 		android:text="@string/activo"
 		/>
 
-	<android.support.design.widget.TextInputLayout
+	<com.google.android.material.textfield.TextInputLayout
 		android:id="@+id/txtNombre_"
 		android:layout_below="@+id/bActivo"
 		android:layout_width="match_parent"
@@ -49,10 +49,10 @@
 			android:hint="@string/nombre"
 			android:inputType="text"
 			android:maxLines="1" />
-	</android.support.design.widget.TextInputLayout>
+	</com.google.android.material.textfield.TextInputLayout>
 
 
-	<android.support.design.widget.TextInputLayout
+	<com.google.android.material.textfield.TextInputLayout
 		android:id="@+id/txtDescripcion_"
 		android:layout_below="@+id/txtNombre_"
 		android:layout_width="match_parent"
@@ -70,7 +70,7 @@
 			android:ems="10"
 			android:inputType="textMultiLine|textCapSentences"
 			android:maxLines="3" />
-	</android.support.design.widget.TextInputLayout>
+	</com.google.android.material.textfield.TextInputLayout>
 
 	<!-- DATE CREATED and MODIFIED ? -->
 
