--- a/app/src/main/res/layout/act_buscar_cont.xml
+++ b/app/src/main/res/layout/act_buscar_cont.xml
@@ -46,7 +46,7 @@
 			android:prompt="@string/activo" />
 	</LinearLayout>
 
-	<android.support.design.widget.TextInputLayout
+	<com.google.android.material.textfield.TextInputLayout
 		android:id="@+id/txtNombre_"
 		android:layout_below="@+id/layActivo"
 		android:layout_width="match_parent"
@@ -63,7 +63,7 @@
 			android:ems="10"
 			android:hint="@string/nombre"
 			android:maxLines="1"/>
-	</android.support.design.widget.TextInputLayout>
+	</com.google.android.material.textfield.TextInputLayout>
 
 	<LinearLayout
 		android:id="@+id/layFechas"
