--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
 	android:id="@+id/main_content"
 	 xmlns:android="http://schemas.android.com/apk/res/android"
 	 xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,25 +9,25 @@
 	 android:fitsSystemWindows="true"
 	 tools:context=".ActMain">
 
-	<android.support.design.widget.AppBarLayout
+	<com.google.android.material.appbar.AppBarLayout
 		android:id="@+id/appbar"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:paddingTop="@dimen/appbar_padding_top"
 		android:theme="@style/AppTheme.AppBarOverlay">
-		<android.support.v7.widget.Toolbar
+		<androidx.appcompat.widget.Toolbar
 			android:id="@+id/toolbar"
 			android:layout_width="match_parent"
 			android:layout_height="?attr/actionBarSize"
 			android:background="?attr/colorPrimary" />
-		<android.support.design.widget.TabLayout
+		<com.google.android.material.tabs.TabLayout
 			android:id="@+id/tabs"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			app:tabIndicatorHeight="2pt"/>
-	</android.support.design.widget.AppBarLayout>
+	</com.google.android.material.appbar.AppBarLayout>
 
-	<android.support.v4.view.ViewPager
+	<androidx.viewpager.widget.ViewPager
 		android:id="@+id/container"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
@@ -35,4 +35,4 @@
 		app:popupTheme="@style/AppTheme.PopupOverlay"
 		app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
