--- a/app/src/main/res/layout/act_ruta_cont.xml
+++ b/app/src/main/res/layout/act_ruta_cont.xml
@@ -14,7 +14,7 @@
 	tools:showIn="@layout/act_ruta">
 
 
-	<android.support.design.widget.TextInputLayout
+	<com.google.android.material.textfield.TextInputLayout
 		android:id="@+id/txtNombre_"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
@@ -30,10 +30,10 @@
 			android:hint="@string/nombre"
 			android:inputType="textCapWords"
 			android:maxLines="1"/>
-	</android.support.design.widget.TextInputLayout>
+	</com.google.android.material.textfield.TextInputLayout>
 
 
-	<android.support.design.widget.TextInputLayout
+	<com.google.android.material.textfield.TextInputLayout
 		android:id="@+id/txtDescripcion_"
 		android:layout_below="@+id/txtNombre_"
 		android:layout_width="match_parent"
@@ -49,7 +49,7 @@
 			android:ems="10"
 			android:inputType="textMultiLine"
 			android:maxLines="3"/>
-	</android.support.design.widget.TextInputLayout>
+	</com.google.android.material.textfield.TextInputLayout>
 
 	<!-- TextView
 		android:id="@+id/lblFecha"
