--- a/app/src/main/res/layout/lista.xml
+++ b/app/src/main/res/layout/lista.xml
@@ -4,14 +4,12 @@
 	android:layout_height="wrap_content"
 	android:orientation="horizontal"
 	android:background="#FFF"
-	android:layout_margin="0dp"
-	>
+	android:layout_margin="0dp">
 
 	<TextView
 		android:id="@+id/txtNombre"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:layout_marginLeft="5dp"
 		android:layout_marginStart="5dp"
 		android:text=""
 		android:textSize="24sp"
@@ -29,7 +27,6 @@
 		android:layout_below="@+id/txtNombre"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:layout_marginLeft="5dp"
 		android:layout_marginStart="5dp"
 		android:text=""
 		android:textSize="14sp"
@@ -43,12 +40,10 @@
 
 	<ImageButton
 		android:id="@+id/btnEditar"
-		android:layout_toLeftOf="@+id/btnMapa"
 		android:layout_toStartOf="@+id/btnMapa"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_centerVertical="true"
-		android:layout_marginRight="15dp"
 		android:layout_marginEnd="15dp"
 		android:background="@android:color/transparent"
 		android:contentDescription="@string/editar"
@@ -60,10 +55,8 @@
 		android:id="@+id/btnMapa"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_alignParentRight="true"
 		android:layout_alignParentEnd="true"
 		android:layout_centerVertical="true"
-		android:layout_marginRight="5dp"
 		android:layout_marginEnd="5dp"
 		android:background="@android:color/transparent"
 		android:contentDescription="@string/ver_mapa"
