--- a/app/src/main/res/menu/menu_act_main.xml
+++ b/app/src/main/res/menu/menu_act_main.xml
@@ -3,6 +3,12 @@
 	  xmlns:tools="http://schemas.android.com/tools"
 	  tools:context=".ActMain">
 	<item
+		android:id="@+id/action_voz"
+		android:orderInCategory="90"
+		android:title="@string/voz_onoff"
+		android:icon="@drawable/ic_mic_off_white_24dp"
+		app:showAsAction="always"/>
+	<item
 		android:id="@+id/action_mapa"
 		android:orderInCategory="100"
 		android:title="@string/ver_mapa"
@@ -13,7 +19,7 @@
 		android:orderInCategory="110"
 		android:title="@string/buscar"
 		android:icon="@android:drawable/ic_menu_search"
-		app:showAsAction="always"/>
+		app:showAsAction="ifRoom"/>
 	<item
 		android:id="@+id/action_config"
 		android:orderInCategory="120"
