--- a/app/src/main/res/menu/menu_aviso.xml
+++ b/app/src/main/res/menu/menu_aviso.xml
@@ -5,17 +5,23 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	tools:context=".ActAviso">
 	<item
-		android:id="@+id/menu_eliminar"
-		android:orderInCategory="100"
-		android:title="@string/eliminar"
-		android:icon="@android:drawable/ic_menu_delete"
-		app:showAsAction="always">
-	</item>
+		android:id="@+id/action_voz"
+		android:orderInCategory="90"
+		android:title="@string/voz_onoff"
+		android:icon="@drawable/ic_mic_off_white_24dp"
+		app:showAsAction="always"/>
 	<item
 		android:id="@+id/menu_guardar"
-		android:orderInCategory="200"
+		android:orderInCategory="100"
 		android:title="@string/guardar"
 		android:icon="@android:drawable/ic_menu_save"
-		app:showAsAction="always">
+		app:showAsAction="always"/>
+	<item
+		android:id="@+id/menu_eliminar"
+		android:orderInCategory="200"
+		android:title="@string/eliminar"
+		android:icon="@android:drawable/ic_menu_delete"
+		app:showAsAction="ifRoom">
 	</item>
+
 </menu>
