--- a/app/src/main/res/menu/menu_lugar.xml
+++ b/app/src/main/res/menu/menu_lugar.xml
@@ -5,10 +5,16 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	tools:context=".ActLugar">
 	<item
-		android:id="@+id/menu_img"
+		android:id="@+id/action_voz"
+		android:orderInCategory="90"
+		android:title="@string/voz_onoff"
+		android:icon="@drawable/ic_mic_off_white_24dp"
+		app:showAsAction="always"/>
+	<item
+		android:id="@+id/menu_guardar"
 		android:orderInCategory="100"
-		android:title="@string/imagen"
-		android:icon="@android:drawable/ic_menu_report_image"
+		android:title="@string/guardar"
+		android:icon="@android:drawable/ic_menu_save"
 		app:showAsAction="always">
 	</item>
 	<item
@@ -16,13 +22,13 @@
 		android:orderInCategory="200"
 		android:title="@string/eliminar"
 		android:icon="@android:drawable/ic_menu_delete"
-		app:showAsAction="always">
+		app:showAsAction="ifRoom">
 	</item>
 	<item
-		android:id="@+id/menu_guardar"
+		android:id="@+id/menu_img"
 		android:orderInCategory="300"
-		android:title="@string/guardar"
-		android:icon="@android:drawable/ic_menu_save"
-		app:showAsAction="always">
+		android:title="@string/imagen"
+		android:icon="@android:drawable/ic_menu_report_image"
+		app:showAsAction="ifRoom">
 	</item>
 </menu>
