--- a/app/src/main/res/xml/pref_voice.xml
+++ b/app/src/main/res/xml/pref_voice.xml
@@ -10,17 +10,9 @@
 		android:defaultValue="false"
 		android:title="@string/pref_voice_on"/>
 
-	<SwitchPreference
+	<EditTextPreference
 		android:defaultValue="false"
 		android:title="@string/pref_header_voice"
 		android:summary="@string/voice_comands_all"/>
-
-	<!-- MultiSelectListPreference
-		android:key="voice_commands"
-		android:title=" "
-		android:summary="@string/pref_header_voice"
-		android:entries="@array/voice_commands"
-		android:entryValues="@array/voice_commands"
-		/ -->
 
 </PreferenceScreen>
