--- a/app/src/main/res/layout-land/act_aviso_cont.xml
+++ b/app/src/main/res/layout-land/act_aviso_cont.xml
@@ -37,9 +37,7 @@
 		android:layout_below="@+id/bActivo"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_alignParentLeft="true"
 		android:layout_alignParentStart="true"
-		android:layout_alignParentRight="true"
 		android:layout_alignParentEnd="true">
 		<EditText
 			android:id="@+id/txtNombre"
@@ -48,7 +46,8 @@
 			android:ems="10"
 			android:hint="@string/nombre"
 			android:inputType="text"
-			android:maxLines="1" />
+			android:maxLines="1"
+			android:importantForAutofill="no" />
 	</com.google.android.material.textfield.TextInputLayout>
 
 
@@ -57,11 +56,8 @@
 		android:layout_below="@+id/txtNombre_"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_alignParentRight="true"
 		android:layout_alignParentEnd="true"
-		android:layout_alignParentLeft="true"
-		android:layout_alignParentStart="true"
-		>
+		android:layout_alignParentStart="true" >
 		<EditText
 			android:id="@+id/txtDescripcion"
 			android:layout_width="match_parent"
@@ -69,7 +65,8 @@
 			android:hint="@string/aviso"
 			android:ems="10"
 			android:inputType="textMultiLine|textCapSentences"
-			android:maxLines="3" />
+			android:maxLines="3"
+			android:importantForAutofill="no" />
 	</com.google.android.material.textfield.TextInputLayout>
 
 	<!-- DATE CREATED and MODIFIED ? -->
@@ -90,7 +87,6 @@
 			android:layout_height="wrap_content"
 			android:textAppearance="?android:attr/textAppearanceMedium"
 			android:text="@string/lat_lon"
-			android:layout_marginRight="5dp"
 			android:layout_marginEnd="5dp"
 			android:layout_gravity="center_vertical"/>
 		<TextView
@@ -98,14 +94,12 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:layout_marginRight="2dp"
 			android:layout_marginEnd="2dp"
 			android:layout_gravity="center_vertical"/>
 		<ImageButton
 			android:id="@+id/btnActPos"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginRight="2dp"
 			android:layout_marginEnd="2dp"
 			android:layout_gravity="center_vertical"
 			android:contentDescription="@string/actualizar_posicion"
@@ -139,14 +133,11 @@
 
 	<!-- *************************************************************************************** -->
 	<fragment
-		xmlns:android="http://schemas.android.com/apk/res/android"
-    	xmlns:tools="http://schemas.android.com/tools"
 		class="com.google.android.gms.maps.SupportMapFragment"
 		tools:context=".ActAviso"
 		android:id="@+id/map"
 		android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-		/>
+        android:layout_weight="1" />
 	<!-- *************************************************************************************** -->
 </LinearLayout>
