--- a/app/src/main/res/layout-land/act_lugar_cont.xml
+++ b/app/src/main/res/layout-land/act_lugar_cont.xml
@@ -26,12 +26,9 @@
 		android:id="@+id/txtNombre_"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_alignParentLeft="true"
 		android:layout_alignParentStart="true"
-		android:layout_alignParentRight="true"
 		android:layout_alignParentEnd="true"
-		android:layout_alignParentTop="true"
-		>
+		android:layout_alignParentTop="true" >
 		<EditText
 			android:id="@+id/txtNombre"
 			android:layout_width="match_parent"
@@ -39,20 +36,17 @@
 			android:ems="10"
 			android:hint="@string/nombre"
 			android:maxLines="1"
-			android:inputType="textCapWords"/>
+			android:inputType="textCapWords"
+			android:importantForAutofill="no" />
 	</com.google.android.material.textfield.TextInputLayout>
-
 
 	<com.google.android.material.textfield.TextInputLayout
 		android:id="@+id/txtDescripcion_"
 		android:layout_below="@+id/txtNombre_"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_alignParentRight="true"
 		android:layout_alignParentEnd="true"
-		android:layout_alignParentLeft="true"
-		android:layout_alignParentStart="true"
-		>
+		android:layout_alignParentStart="true" >
 		<EditText
 			android:id="@+id/txtDescripcion"
 			android:layout_width="match_parent"
@@ -60,7 +54,8 @@
 			android:hint="@string/descripcion"
 			android:ems="10"
 			android:inputType="textMultiLine|textCapSentences"
-			android:maxLines="3"/>
+			android:maxLines="3"
+			android:importantForAutofill="no" />
 	</com.google.android.material.textfield.TextInputLayout>
 
 	<!-- DATE CREATED and MODIFIED ? -->
@@ -81,7 +76,6 @@
 			android:layout_height="wrap_content"
 			android:textAppearance="?android:attr/textAppearanceSmall"
 			android:text="@string/lat_lon"
-			android:layout_marginRight="5dp"
 			android:layout_marginEnd="5dp"
 			android:layout_gravity="center_vertical"/>
 		<TextView
@@ -89,7 +83,6 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:layout_marginRight="2dp"
 			android:layout_marginEnd="2dp"
 			android:textIsSelectable="true"
 			android:layout_gravity="center_vertical"/>
@@ -97,7 +90,6 @@
 			android:id="@+id/btnActPos"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginRight="2dp"
 			android:layout_marginEnd="2dp"
 			android:layout_gravity="center_vertical"
 			android:contentDescription="@string/actualizar_posicion"
@@ -109,14 +101,11 @@
 
 	<!-- *************************************************************************************** -->
 	<fragment
-		xmlns:android="http://schemas.android.com/apk/res/android"
-    	xmlns:tools="http://schemas.android.com/tools"
 		class="com.google.android.gms.maps.SupportMapFragment"
 		tools:context=".ActLugar"
 		android:id="@+id/map"
 		android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-		/>
+        android:layout_weight="1" />
 	<!-- *************************************************************************************** -->
 </LinearLayout>
