--- a/app/src/main/res/layout/act_aviso_cont.xml
+++ b/app/src/main/res/layout/act_aviso_cont.xml
@@ -20,17 +20,14 @@
 		android:layout_centerHorizontal="true"
 		android:layout_marginTop="5dp"
 		android:layout_marginBottom="5dp"
-		android:text="@string/activo"
-		/>
+		android:text="@string/activo" />
 
 	<com.google.android.material.textfield.TextInputLayout
 		android:id="@+id/txtNombre_"
 		android:layout_below="@+id/bActivo"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_alignParentLeft="true"
 		android:layout_alignParentStart="true"
-		android:layout_alignParentRight="true"
 		android:layout_alignParentEnd="true">
 		<EditText
 			android:id="@+id/txtNombre"
@@ -39,7 +36,8 @@
 			android:ems="10"
 			android:hint="@string/nombre"
 			android:inputType="textCapWords"
-			android:maxLines="1"/>
+			android:maxLines="1"
+			android:importantForAutofill="no" />
 	</com.google.android.material.textfield.TextInputLayout>
 
 
@@ -48,11 +46,8 @@
 		android:layout_below="@+id/txtNombre_"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_alignParentRight="true"
 		android:layout_alignParentEnd="true"
-		android:layout_alignParentLeft="true"
-		android:layout_alignParentStart="true"
-		>
+		android:layout_alignParentStart="true" >
 		<EditText
 			android:id="@+id/txtDescripcion"
 			android:layout_width="match_parent"
@@ -60,7 +55,8 @@
 			android:hint="@string/aviso"
 			android:ems="10"
 			android:inputType="textMultiLine|textCapSentences"
-			android:maxLines="3"/>
+			android:maxLines="3"
+			android:importantForAutofill="no" />
 	</com.google.android.material.textfield.TextInputLayout>
 
 	<!-- DATE CREATED and MODIFIED ? -->
@@ -81,7 +77,6 @@
 			android:layout_height="wrap_content"
 			android:textAppearance="?android:attr/textAppearanceMedium"
 			android:text="@string/lat_lon"
-			android:layout_marginRight="5dp"
 			android:layout_marginEnd="5dp"
 			android:layout_gravity="center_vertical"/>
 		<TextView
@@ -89,7 +84,6 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:layout_marginRight="2dp"
 			android:layout_marginEnd="2dp"
 			android:text=""
 			android:layout_gravity="center_vertical"/>
@@ -97,7 +91,6 @@
 			android:id="@+id/btnActPos"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginRight="2dp"
 			android:layout_marginEnd="2dp"
 			android:layout_gravity="center_vertical"
 			android:contentDescription="@string/actualizar_posicion"
@@ -129,13 +122,10 @@
 	<fragment
 		android:id="@+id/map"
 		android:layout_below="@+id/layRadio"
-		xmlns:android="http://schemas.android.com/apk/res/android"
-    	xmlns:tools="http://schemas.android.com/tools"
 		class="com.google.android.gms.maps.SupportMapFragment"
 		android:layout_marginTop="5dp"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		tools:context=".ActAviso"
-		/>
+		tools:context=".ActAviso" />
 
 </RelativeLayout>
