--- a/app/src/main/res/layout/act_buscar.xml
+++ b/app/src/main/res/layout/act_buscar.xml
@@ -24,12 +24,12 @@
 
 	<include layout="@layout/act_buscar_cont"/>
 
-	<com.google.android.material.floatingactionbutton.FloatingActionButton
+	<!-- com.google.android.material.floatingactionbutton.FloatingActionButton
 		android:id="@+id/fabVolver"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="bottom|end"
 		android:layout_margin="@dimen/fab_margin"
-		android:src="@android:drawable/ic_menu_revert"/>
+		android:src="@android:drawable/ic_menu_revert"/ -->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
