--- a/app/src/main/res/layout/act_lugar_cont.xml
+++ b/app/src/main/res/layout/act_lugar_cont.xml
@@ -18,12 +18,9 @@
 		android:id="@+id/txtNombre_"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_alignParentLeft="true"
 		android:layout_alignParentStart="true"
-		android:layout_alignParentRight="true"
 		android:layout_alignParentEnd="true"
-		android:layout_alignParentTop="true"
-		>
+		android:layout_alignParentTop="true" >
 		<EditText
 			android:id="@+id/txtNombre"
 			android:layout_width="match_parent"
@@ -31,7 +28,8 @@
 			android:ems="10"
 			android:hint="@string/nombre"
 			android:maxLines="1"
-			android:inputType="textCapWords"/>
+			android:inputType="textCapWords"
+			android:importantForAutofill="no" />
 	</com.google.android.material.textfield.TextInputLayout>
 
 
@@ -40,11 +38,8 @@
 		android:layout_below="@+id/txtNombre_"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_alignParentRight="true"
 		android:layout_alignParentEnd="true"
-		android:layout_alignParentLeft="true"
-		android:layout_alignParentStart="true"
-		>
+		android:layout_alignParentStart="true" >
 		<EditText
 			android:id="@+id/txtDescripcion"
 			android:layout_width="match_parent"
@@ -52,7 +47,8 @@
 			android:hint="@string/descripcion"
 			android:ems="10"
 			android:inputType="textMultiLine|textCapSentences"
-			android:maxLines="3"/>
+			android:maxLines="3"
+			android:importantForAutofill="no" />
 	</com.google.android.material.textfield.TextInputLayout>
 
 	<!-- DATE CREATED and MODIFIED ? -->
@@ -73,7 +69,6 @@
 			android:layout_height="wrap_content"
 			android:textAppearance="?android:attr/textAppearanceSmall"
 			android:text="@string/lat_lon"
-			android:layout_marginRight="5dp"
 			android:layout_marginEnd="5dp"
 			android:layout_gravity="center_vertical"/>
 		<TextView
@@ -81,7 +76,6 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:layout_marginRight="2dp"
 			android:layout_marginEnd="2dp"
 			android:textIsSelectable="true"
 			android:text=""
@@ -90,7 +84,6 @@
 			android:id="@+id/btnActPos"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginRight="2dp"
 			android:layout_marginEnd="2dp"
 			android:layout_gravity="center_vertical"
 			android:contentDescription="@string/actualizar_posicion"
@@ -102,13 +95,10 @@
 	<fragment
 		android:id="@+id/map"
 		android:layout_below="@+id/layPosicion"
-		xmlns:android="http://schemas.android.com/apk/res/android"
-    	xmlns:tools="http://schemas.android.com/tools"
 		class="com.google.android.gms.maps.SupportMapFragment"
 		android:layout_marginTop="5dp"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		tools:context=".ActLugar"
-		/>
+		tools:context=".ActLugar" />
 
 </RelativeLayout>
