--- a/app/src/main/res/layout/act_maps.xml
+++ b/app/src/main/res/layout/act_maps.xml
@@ -6,8 +6,7 @@
 	android:layout_height="match_parent"
 	android:fitsSystemWindows="true">
 
-	<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    	xmlns:tools="http://schemas.android.com/tools"
+	<fragment
 		android:id="@+id/map"
 		android:name="com.google.android.gms.maps.SupportMapFragment"
 		android:layout_width="match_parent"
@@ -18,21 +17,22 @@
 		android:id="@+id/btnGuardar"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_gravity="center_horizontal|bottom"
+		android:layout_gravity="bottom|center_horizontal"
 		android:layout_margin="@dimen/fab_margin"
 		android:src="@android:drawable/ic_menu_save"/>
-	<com.google.android.material.floatingactionbutton.FloatingActionButton
+	<!-- com.google.android.material.floatingactionbutton.FloatingActionButton
 		android:id="@+id/fabVolver"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_gravity="end|bottom"
-		android:layout_margin="@dimen/fab_margin"
-		android:src="@android:drawable/ic_menu_revert"/>
+		android:layout_gravity="bottom|start"
+		android:layout_marginStart="95dp"
+		android:layout_marginBottom="@dimen/fab_margin"
+		android:src="@android:drawable/ic_menu_revert"/ -->
 	<com.google.android.material.floatingactionbutton.FloatingActionButton
 		android:id="@+id/fabBuscar"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="bottom|start"
 		android:layout_margin="@dimen/fab_margin"
-		android:src="@android:drawable/ic_menu_search"/>
+		android:src="@android:drawable/ic_menu_search" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
