--- a/app/src/main/res/layout/dialog_buscar_calle.xml
+++ b/app/src/main/res/layout/dialog_buscar_calle.xml
@@ -3,13 +3,6 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <!-- ImageView
-        android:src="@drawable/header_logo"
-        android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:scaleType="center"
-        android:background="#FFFFBB33"
-        android:contentDescription="@string/app_name" / -->
     <EditText
         android:id="@+id/direccion"
         android:inputType="text|textPostalAddress"
@@ -19,5 +12,6 @@
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
-        android:hint="@string/direccion" />
+        android:hint="@string/direccion"
+        android:autofillHints="address" />
 </LinearLayout>
