--- a/app/src/main/res/layout/act_aviso.xml
+++ b/app/src/main/res/layout/act_aviso.xml
@@ -23,13 +23,6 @@
 
 	<include layout="@layout/act_aviso_cont"/>
 
-	<!-- com.google.android.material.floatingactionbutton.FloatingActionButton
-		android:id="@+id/fabVolver"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_gravity="bottom|end"
-		android:layout_margin="@dimen/fab_margin"
-		android:src="@android:drawable/ic_menu_revert"/ -->
 	<com.google.android.material.floatingactionbutton.FloatingActionButton
 		android:id="@+id/fabBuscar"
 		android:layout_width="wrap_content"
@@ -37,5 +30,13 @@
 		android:layout_gravity="bottom|start"
 		android:layout_margin="@dimen/fab_margin"
 		android:src="@android:drawable/ic_menu_search"/>
+
+	<ProgressBar
+		android:id="@+id/progressBar"
+		style="?android:attr/progressBarStyle"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center_horizontal|center_vertical"
+		android:visibility="invisible"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
