--- a/app/src/main/res/layout/act_aviso_cont.xml
+++ b/app/src/main/res/layout/act_aviso_cont.xml
@@ -103,20 +103,34 @@
 		android:layout_below="@+id/layPosicion"
 		android:orientation="horizontal"
 		android:layout_centerHorizontal="true"
-		android:layout_width="wrap_content"
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_marginTop="4dp">
 		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:textAppearance="?android:attr/textAppearanceMedium"
-			android:text="@string/radio"/>
-		<Spinner
-			android:id="@+id/spnRadio"
+			android:focusable="false"
+			android:text="@string/radio"
+			android:layout_weight="1"/>
+		<SeekBar
+			android:id="@+id/seekBar"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+			android:progressDrawable="@drawable/progress_bar"
+			android:layout_weight="100"
+			android:paddingTop="10dp"
+			android:paddingBottom="10dp"
+			android:progress="10"
+			android:min="3"
+			android:max="32"/>
+		<TextView
+			android:id="@+id/lblRadio"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:prompt="@string/radio" />
+			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:focusable="false"
+			android:layout_weight="1"/>
 	</LinearLayout>
 
 	<fragment
