--- a/app/src/main/res/layout/act_maps.xml
+++ b/app/src/main/res/layout/act_maps.xml
@@ -20,14 +20,7 @@
 		android:layout_gravity="bottom|center_horizontal"
 		android:layout_margin="@dimen/fab_margin"
 		android:src="@android:drawable/ic_menu_save"/>
-	<!-- com.google.android.material.floatingactionbutton.FloatingActionButton
-		android:id="@+id/fabVolver"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_gravity="bottom|start"
-		android:layout_marginStart="95dp"
-		android:layout_marginBottom="@dimen/fab_margin"
-		android:src="@android:drawable/ic_menu_revert"/ -->
+
 	<com.google.android.material.floatingactionbutton.FloatingActionButton
 		android:id="@+id/fabBuscar"
 		android:layout_width="wrap_content"
@@ -35,4 +28,13 @@
 		android:layout_gravity="bottom|start"
 		android:layout_margin="@dimen/fab_margin"
 		android:src="@android:drawable/ic_menu_search" />
+
+	<ProgressBar
+		android:id="@+id/progressBar"
+		style="?android:attr/progressBarStyle"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center_horizontal|center_vertical"
+		android:visibility="invisible"/>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
