--- a/app/src/main/res/layout/act_ruta.xml
+++ b/app/src/main/res/layout/act_ruta.xml
@@ -23,12 +23,12 @@
 
 	<include layout="@layout/act_ruta_cont"/>
 
-	<!-- com.google.android.material.floatingactionbutton.FloatingActionButton
-		android:id="@+id/fabVolver"
+	<ProgressBar
+		android:id="@+id/progressBar"
+		style="?android:attr/progressBarStyle"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_gravity="bottom|start"
-		android:layout_margin="@dimen/fab_margin"
-		android:src="@android:drawable/ic_menu_revert"/ -->
+		android:layout_gravity="center_horizontal|center_vertical"
+		android:visibility="invisible"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
