--- a/app/src/main/res/layout/act_widget_nuevo.xml
+++ b/app/src/main/res/layout/act_widget_nuevo.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:orientation="horizontal">
@@ -9,10 +10,14 @@
 		android:id="@+id/txtNombre"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
-		android:hint="@string/nuevo_lugar"
 		android:layout_weight="1"
+		android:autofillHints="name"
+		android:hint="@string/nuevo_lugar"
 		android:inputType="textCapWords"
-		android:autofillHints="name" />
+		app:layout_constraintBottom_toBottomOf="@+id/btnSave"
+		app:layout_constraintEnd_toStartOf="@+id/btnSave"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
 
 	<ImageButton
 		android:id="@+id/btnSave"
@@ -20,6 +25,17 @@
 		android:layout_height="wrap_content"
 		android:contentDescription="@string/guardar"
 		android:imeOptions="actionDone"
-		android:src="@android:drawable/ic_menu_save" />
+		android:src="@android:drawable/ic_menu_save"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
 
-</LinearLayout>
+	<ProgressBar
+		android:id="@+id/progressBar"
+		style="?android:attr/progressBarStyle"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
