--- a/app/src/main/res/layout-land/act_aviso_cont.xml
+++ b/app/src/main/res/layout-land/act_aviso_cont.xml
@@ -107,35 +107,40 @@
 			style="@style/btnStyle" />
 	</LinearLayout>
 
-	<LinearLayout
-		android:id="@+id/layRadio"
-		android:layout_below="@+id/layPosicion"
-		android:orientation="horizontal"
-		android:layout_centerHorizontal="true"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_marginTop="4dp">
-		<TextView
-			android:layout_width="wrap_content"
+		<LinearLayout
+			android:id="@+id/layRadio"
+			android:layout_below="@+id/layPosicion"
+			android:orientation="horizontal"
+			android:layout_centerHorizontal="true"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:textAppearance="?android:attr/textAppearanceMedium"
-			android:text="@string/radio"/>
-		<!-- Spinner
-			android:id="@+id/spnRadio"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:prompt="@string/radio" /-->
-		<SeekBar
-			android:id="@+id/seekBar"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:layout_weight="1"
-			android:progress="10"
-			android:min="10"
-			android:max="5000"/>
-	</LinearLayout>
+			android:layout_marginTop="4dp">
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:textAppearance="?android:attr/textAppearanceMedium"
+				android:focusable="false"
+				android:text="@string/radio"
+				android:layout_weight="1"/>
+			<SeekBar
+				android:id="@+id/seekBar"
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+				android:progressDrawable="@drawable/progress_bar"
+				android:layout_weight="100"
+				android:paddingTop="10dp"
+				android:paddingBottom="10dp"
+				android:progress="10"
+				android:min="3"
+				android:max="32"/>
+			<TextView
+				android:id="@+id/lblRadio"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:textAppearance="?android:attr/textAppearanceMedium"
+				android:focusable="false"
+				android:layout_weight="1"/>
+		</LinearLayout>
 
 	</RelativeLayout>
 	<!-- *************************************************************************************** -->
