--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -10,24 +10,24 @@
 	<androidx.appcompat.widget.LinearLayoutCompat
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
+		android:layout_margin="0dp"
 		android:orientation="vertical">
 
 		<com.google.android.material.appbar.AppBarLayout
 			android:id="@+id/appbar"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:paddingTop="@dimen/appbar_padding_top"
+			android:paddingTop="0dp"
+			android:background="@drawable/side_nav_bar"
 			android:theme="@style/AppTheme.AppBarOverlay">
 			<androidx.appcompat.widget.Toolbar
 				android:id="@+id/toolbar"
 				android:layout_width="match_parent"
-				android:layout_height="?attr/actionBarSize"
-				android:background="?attr/colorPrimary" />
+				android:layout_height="?attr/actionBarSize"/>
 			<com.google.android.material.tabs.TabLayout
 				android:id="@+id/tabs"
 				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				app:tabIndicatorHeight="2pt"/>
+				android:layout_height="wrap_content"/>
 		</com.google.android.material.appbar.AppBarLayout>
 
 		<androidx.viewpager.widget.ViewPager
