--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -16,7 +16,7 @@
         android:id="@+id/userImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="User image"
+        android:contentDescription="@string/user_image"
         android:paddingTop="24dp"
         app:srcCompat="@mipmap/ic_launcher" />
 
@@ -25,13 +25,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="12dp"
-        android:text="John Smith"
+        android:text=""
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/userEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="johnsmith@gmail.com" />
+        android:text="" />
 
 </LinearLayout>
