--- a/app/src/main/res/menu/menu_aviso.xml
+++ b/app/src/main/res/menu/menu_aviso.xml
@@ -5,12 +5,6 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	tools:context=".ActAviso">
 	<item
-		android:id="@+id/action_voz"
-		android:orderInCategory="90"
-		android:title="@string/voz_onoff"
-		android:icon="@drawable/ic_mic_off_white_24dp"
-		app:showAsAction="always"/>
-	<item
 		android:id="@+id/menu_guardar"
 		android:orderInCategory="100"
 		android:title="@string/guardar"
@@ -21,7 +15,11 @@
 		android:orderInCategory="200"
 		android:title="@string/eliminar"
 		android:icon="@android:drawable/ic_menu_delete"
-		app:showAsAction="ifRoom">
-	</item>
-
+		app:showAsAction="ifRoom"/>
+	<item
+		android:id="@+id/action_voz"
+		android:orderInCategory="400"
+		android:title="@string/voz_onoff"
+		android:icon="@drawable/ic_mic_off_white_24dp"
+		app:showAsAction="ifRoom"/>
 </menu>
