--- a/app/src/main/res/menu/menu_buscar.xml
+++ b/app/src/main/res/menu/menu_buscar.xml
@@ -9,13 +9,11 @@
 		android:orderInCategory="100"
 		android:title="@string/eliminar"
 		android:icon="@android:drawable/ic_menu_delete"
-		app:showAsAction="always">
-	</item>
+		app:showAsAction="ifRoom"/>
 	<item
 		android:id="@+id/menu_buscar"
 		android:orderInCategory="200"
 		android:title="@string/buscar"
 		android:icon="@android:drawable/ic_menu_search"
-		app:showAsAction="always">
-	</item>
+		app:showAsAction="ifRoom"/>
 </menu>
