--- a/app/src/main/res/menu/menu_lugar.xml
+++ b/app/src/main/res/menu/menu_lugar.xml
@@ -5,30 +5,27 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	tools:context=".ActLugar">
 	<item
-		android:id="@+id/action_voz"
-		android:orderInCategory="90"
-		android:title="@string/voz_onoff"
-		android:icon="@drawable/ic_mic_off_white_24dp"
-		app:showAsAction="always"/>
-	<item
 		android:id="@+id/menu_guardar"
 		android:orderInCategory="100"
 		android:title="@string/guardar"
 		android:icon="@android:drawable/ic_menu_save"
-		app:showAsAction="always">
-	</item>
+		app:showAsAction="always"/>
 	<item
 		android:id="@+id/menu_eliminar"
 		android:orderInCategory="200"
 		android:title="@string/eliminar"
 		android:icon="@android:drawable/ic_menu_delete"
-		app:showAsAction="ifRoom">
-	</item>
+		app:showAsAction="ifRoom"/>
 	<item
 		android:id="@+id/menu_img"
 		android:orderInCategory="300"
 		android:title="@string/imagen"
 		android:icon="@android:drawable/ic_menu_report_image"
-		app:showAsAction="ifRoom">
-	</item>
+		app:showAsAction="ifRoom"/>
+	<item
+		android:id="@+id/action_voz"
+		android:orderInCategory="400"
+		android:title="@string/voz_onoff"
+		android:icon="@drawable/ic_mic_off_white_24dp"
+		app:showAsAction="ifRoom"/>
 </menu>
