--- a/app/src/main/res/xml/settings_voice.xml
+++ b/app/src/main/res/xml/settings_voice.xml
@@ -13,7 +13,7 @@
 
     <EditTextPreference
         android:defaultValue="false"
-        android:title="@string/pref_header_voice"
+        android:title="@string/nav_voice"
         android:summary="@string/voice_comands_all"/>
 
 </PreferenceScreen>
