--- a/app/src/main/res/layout/act_login.xml
+++ b/app/src/main/res/layout/act_login.xml
@@ -7,7 +7,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:fitsSystemWindows="true"
-	tools:context=".ActLogin">
+	tools:context=".views.ActLogin">
 
 	<com.google.android.material.appbar.AppBarLayout
 		android:id="@+id/appbar"
