--- a/app/src/main/res/layout/act_maps.xml
+++ b/app/src/main/res/layout/act_maps.xml
@@ -6,12 +6,13 @@
 	android:layout_height="match_parent"
 	android:fitsSystemWindows="true">
 
+	<!-- TODO: Add toolbar too... -->
 	<fragment
 		android:id="@+id/map"
 		android:name="com.google.android.gms.maps.SupportMapFragment"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		tools:context=".ActMaps" />
+		tools:context=".views.ActMaps" />
 
 	<com.google.android.material.floatingactionbutton.FloatingActionButton
 		android:id="@+id/btnGuardar"
