--- a/app/src/main/res/layout-land/act_lugar_cont.xml
+++ b/app/src/main/res/layout-land/act_lugar_cont.xml
@@ -12,7 +12,7 @@
 	android:paddingRight="@dimen/activity_horizontal_margin"
 	android:paddingTop="@dimen/activity_vertical_margin"
 	app:layout_behavior="@string/appbar_scrolling_view_behavior"
-	tools:context="com.cesoft.encuentrame3.ActLugar"
+	tools:context="com.cesoft.encuentrame3.views.ActLugar"
 	tools:showIn="@layout/act_lugar"
 	>
 
@@ -102,7 +102,7 @@
 	<!-- *************************************************************************************** -->
 	<fragment
 		class="com.google.android.gms.maps.SupportMapFragment"
-		tools:context=".ActLugar"
+		tools:context=".views.ActLugar"
 		android:id="@+id/map"
 		android:layout_width="0dp"
         android:layout_height="match_parent"
