--- a/app/src/main/res/layout/act_buscar_cont.xml
+++ b/app/src/main/res/layout/act_buscar_cont.xml
@@ -10,7 +10,7 @@
 	android:paddingRight="@dimen/activity_horizontal_margin"
 	android:paddingTop="@dimen/activity_vertical_margin"
 	app:layout_behavior="@string/appbar_scrolling_view_behavior"
-	tools:context="com.cesoft.encuentrame3.ActBuscar"
+	tools:context="com.cesoft.encuentrame3.views.ActBuscar"
 	tools:showIn="@layout/act_buscar">
 
 	<!-- Switch
@@ -129,6 +129,6 @@
 		android:layout_marginTop="5dp"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		tools:context=".ActBuscar" />
+		tools:context=".views.ActBuscar" />
 
 </RelativeLayout>
