--- a/app/src/main/res/layout/act_imagen.xml
+++ b/app/src/main/res/layout/act_imagen.xml
@@ -3,7 +3,7 @@
 			 android:layout_width="match_parent"
 			 android:layout_height="match_parent"
 			 android:background="#000000"
-			 tools:context="com.cesoft.encuentrame3.ActImagen">
+			 tools:context="com.cesoft.encuentrame3.views.ActImagen">
 
 	<ImageView
 		android:id="@+id/imagen"
