--- a/app/src/main/res/layout/act_lugar.xml
+++ b/app/src/main/res/layout/act_lugar.xml
@@ -7,7 +7,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:fitsSystemWindows="true"
-	tools:context="com.cesoft.encuentrame3.ActLugar">
+	tools:context="com.cesoft.encuentrame3.views.ActLugar">
 
 	<com.google.android.material.appbar.AppBarLayout
 		android:layout_width="match_parent"
