--- a/app/src/main/res/menu/menu_buscar.xml
+++ b/app/src/main/res/menu/menu_buscar.xml
@@ -3,7 +3,7 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
-	tools:context=".ActRuta">
+	tools:context=".views.ActRuta">
 	<item
 		android:id="@+id/menu_eliminar"
 		android:orderInCategory="100"
