--- a/app/src/main/res/menu/menu_mapa.xml
+++ b/app/src/main/res/menu/menu_mapa.xml
@@ -3,7 +3,7 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
-	tools:context=".ActMaps">
+	tools:context=".views.ActMaps">
 	<item
 		android:id="@+id/action_voz"
 		android:orderInCategory="90"
